<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bangnv.talkai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_talk"
        android:name="com.bangnv.talkai.ui.talk.TalkFragment"
        android:label="@string/title_talk"
        tools:layout="@layout/fragment_talk" />

    <fragment
        android:id="@+id/nav_vocabulary"
        android:name="com.bangnv.talkai.ui.vocabulary.VocabularyFragment"
        android:label="@string/title_vocabulary"
        tools:layout="@layout/fragment_vocabulary" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.bangnv.talkai.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>