<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.talk.TalkFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rg_ai_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_talk_right" />

    <RadioGroup
        android:id="@+id/rg_ai_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintBottom_toTopOf="@id/messageLayout">

        <RadioButton
            android:id="@+id/rb_gemini"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/_10dp"
            android:text="@string/str_gemini"
            android:checked="true" />

        <RadioButton
            android:id="@+id/rb_chatgpt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingHorizontal="@dimen/_10dp"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/str_chatgpt" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_shape_round_20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/edt_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:paddingVertical="@dimen/_5dp"
            android:hint="@string/hint_message"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            android:paddingStart="@dimen/_16dp"
            android:scrollbars="vertical"
            android:background="@null"
            android:gravity="top|start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:src="@drawable/ic_send"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/descrip_send_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_mic"
            android:layout_width="@dimen/_56dp"
            android:layout_height="@dimen/_56dp"
            android:visibility="gone"
            android:src="@drawable/ic_microphone"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/descrip_microphone_icon"
            app:layout_constraintTop_toTopOf="@id/btn_send"
            app:layout_constraintBottom_toBottomOf="@id/btn_send"
            app:layout_constraintStart_toStartOf="@id/btn_send"
            app:layout_constraintEnd_toEndOf="@id/btn_send" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
